--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "devDependencies": {
+    "firebase": "^7.2.2"
+  }
 }
